--- a/mockito/pom.xml
+++ b/mockito/pom.xml
@@ -42,6 +42,13 @@
 			<version>3.8.0</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
+<dependency>
+    <groupId>org.powermock</groupId>
+    <artifactId>powermock-module-junit4</artifactId>
+    <version>2.0.9</version>
+    <scope>test</scope>
+</dependency>
 	</dependencies>
 
 	<build>
